--- a/ansible/vars/environment-specific/data-qa.yml
+++ b/ansible/vars/environment-specific/data-qa.yml
@@ -54,8 +54,11 @@ nginx:
   use_selfsigned_certificate: true
   fqdn_common_part: lounaistieto.fi
 
-acmetool_hostnames:
-  - "{{ public_facing_hostname }}"
+certbot_admin_email: dataportaali-dev@gofore.com
+certbot_create_if_missing: true
+certbot_certs:
+  - domains:
+      - "{{ public_facing_hostname }}"
 
 solr:
   host: 127.0.0.1
