--- a/ansible/vars/environment-specific/data-qa.yml
+++ b/ansible/vars/environment-specific/data-qa.yml
@@ -51,7 +51,7 @@ mysql:
 
 nginx:
   use_ssl_certificate: true
-  use_selfsigned_certificate: true
+  use_selfsigned_certificate: false
   fqdn_common_part: lounaistieto.fi
 
 certbot_admin_email: dataportaali-dev@gofore.com
